Name:                symbolic-trace
Version:             0.0
Synopsis:            Symbolic execution of traces for program understanding
Description:         Symbolic execution of traces for program understanding
Author:              Patrick Hulin
Maintainer:          Patrick Hulin <phulin@mit.edu>
Build-Depends:       base, mtl, transformers, bytestring, binary >= 0.6.0.0, containers >= 0.5.0.0, llvm-data-interop, llvm-base-types, network, aeson, text, reset-types, pretty, filepath, directory, process, zlib, deepseq

Build-Type:			 Simple
Executable:          Eval
Main-is:             Main.hs
